--- a/gym/src/main/resources/templates/customers.html
+++ b/gym/src/main/resources/templates/customers.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 	<h1>Customers</h1>
+    <div>
+        <a href="/martialarts" class="btn btn-success">Martial Arts</a>
+        <a href="/courses" class="btn btn-success">Courses</a>
+        <a href="/coaches" class="btn btn-success">Coaches</a>
+        <a href="/prices" class="btn btn-success">Prices</a>
+    </div>
     <table class="table table-striped">
 		<tr>
 		    <th>First Name</th>
