--- a/gym/src/main/resources/templates/editprice.html
+++ b/gym/src/main/resources/templates/editprice.html
@@ -12,10 +12,12 @@
             <input type="hidden" id="price_id" th:field="*{price_id}" />
 		  	<label for="name">Name</label>
 			<input type="text" id="name" th:field="*{name}" />
+			<p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</p>
 			<div style="clear: both; display: block; height: 10px;"></div>
 
 		  	<label for="unitprice">Price</label>
 			<input type="number" id="unitprice" th:field="*{unitprice}" />
+			<p th:if="${#fields.hasErrors('unitprice')}" th:errors="*{unitprice}">Name Error</p>
 			<div style="clear: both; display: block; height: 10px;"></div>
 
 			<input type="submit" value="Save"></input>
