--- a/gym/src/main/resources/templates/login.html
+++ b/gym/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
             <div><label> Password: <input type="password" name="password" class="form-control"/> </label></div>
             <div><input type="submit" value="Sign In" class="btn btn-primary"/></div>
         </form>
-
+        <a th:href="@{/signup}">Sign-up</a>
        </div>
     </body>
 </html>
