--- a/gym/src/main/resources/templates/courses.html
+++ b/gym/src/main/resources/templates/courses.html
@@ -19,25 +19,24 @@
 	</div>
     <div>
         <a href="/martialarts" class="btn btn-success">Martial Arts</a>
-        <a href="/coaches" class="btn btn-success">Coaches</a>
         <a href="/customers" class="btn btn-success">Customers</a>
         <a href="/prices" class="btn btn-success">Prices</a>
     </div>
     <table class="table table-striped">
 		<tr>
 		    <th>Name</th>
+            <th>Martial Art</th>
 		    <th>Period</th>
             <th>Price</th>
-            <th>Coaches</th>
             <th>Customers</th>
             <th sec:authorize="hasAuthority('ADMIN')"> </th>
 		</tr>  
     	<tr th:each = "course : ${courses}">
     		<td th:text="${course.name}"></td>
+            <td th:text="${course.martialart.name}"></td>
             <td th:text="${course.period}"></td>
-            <td th:text="${course.price.euros}"></td>
-            <a th:href="@{/coaches/}">Coaches</a>
-            <a th:href="@{/customerscourse/{id}(id=${customercourse.customercourse_id})}">Customers</a>
+            <td th:text="${course.price.unitprice} + €"></td>
+            <td ><a th:href="@{/findcuscourse/{id}(id=${course.course_id})}">Customers</a></td>
             <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/courses/edit/{id}(id=${course.course_id})}">Edit</a></td>  
             <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/courses/delete/{id}(id=${course.course_id})}" class="btn btn-danger">Delete</a></td>		
     	</tr>
