--- a/gym/src/main/resources/templates/addmartialart.html
+++ b/gym/src/main/resources/templates/addmartialart.html
@@ -10,6 +10,7 @@
 	<div>
 		<form th:object="${martialart}" th:action="@{save}" action="#" method="post">
 		  	<label for="name">Name</label>
+			<p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
 			<input type="text" id="name" th:field="*{name}" />
 			<div style="clear: both; display: block; height: 10px;"></div>
 
