--- a/gym/src/main/resources/templates/prices.html
+++ b/gym/src/main/resources/templates/prices.html
@@ -22,6 +22,7 @@
         <a href="/coaches" class="btn btn-success">Coaches</a>
         <a href="/courses" class="btn btn-success">Courses</a>
         <a href="/customers" class="btn btn-success">Customers</a>
+        <a href="/customercourses" class="btn btn-success">Attendees</a>
     </div>
     <table class="table table-striped">
 		<tr>
