--- a/gym/src/main/resources/templates/customercourses.html
+++ b/gym/src/main/resources/templates/customercourses.html
@@ -20,6 +20,7 @@
     <div>
         <a href="/martialarts" class="btn btn-success">Martial Arts</a>
         <a href="/customers" class="btn btn-success">Customers</a>
+        <a href="/coaches" class="btn btn-success">Coaches</a>
         <a href="/prices" class="btn btn-success">Prices</a>
         <a href="/courses" class="btn btn-success">Courses</a>
     </div>
@@ -40,6 +41,6 @@
             <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/customercourses/delete/{id}(id=${customercourse.customercourse_id})}" class="btn btn-danger">Delete</a></td>		
     	</tr>
      </table>
-	
+	 <a href="/customercourses/add" class="btn btn-success" sec:authorize="hasAuthority('ADMIN')">Add Course</a>
 </body>
 </html>
